org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/valid/Operation/001_OperationTest01.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */


using kermeta::standard

package test {
	class Main 
	{
	 
		@main "" 
		operation testInv2(str : Collection<String>) : kermeta::standard::Void is do 
			kermeta::io::StdIO.writeln("Hello World, everybody!")
			
		end
		
		@main ""
		operation main(str : String, str2 : String, str3 : String) : kermeta::standard::Void is do
		
		end
		
	}
	
	class A<String> {
	}
	
}

