org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Constraint/002_ConstraintTest.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */

using kermeta::standard

package test {
	class Main
	{
		
		
		operation main() : Void 
		pre testPrecond is do
			do
				if (true)
				then
					result:=true
				else
					false
				end
			end
		end
		is do 
			//StdIO.writeln("Hello world")
		end
		
		
		
	}
	

}

